# incidence_simplex_ds

./: CMakeLists.txt
common/: CMakeLists.txt  common.cpp  common.h
example/: CMakeLists.txt  example.cpp
io/: CMakeLists.txt  io.cpp  io.h
mesh/: CMakeLists.txt  geometry_kernel.cpp  geometry_kernel.h  mesh.cpp  mesh.h  topology_kernel.cpp  topology_kernel.h
property/: CMakeLists.txt  base_property.h  property.cpp  property.h  property_manager.h  simplex_property.cpp  simplex_property.h  status.h
simplex/: CMakeLists.txt  simpex.h  simplex_handle.h  simplex_manager.h
topology_operation/: CMakeLists.txt  topology_operation.cpp  topology_operation.h  utils.cpp  utils.h
