cmake_minimum_required(VERSION 2.8)

project(incidence_simplex)
set(CMAKE_CXX_FLAGS "-fopenmp -fPIC -fpermissive")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "$ENV{HOME}/usr/share/cmake/Modules/")
include($ENV{HOME}/usr/share/cmake/Modules/geo_sim_sdk.cmake)
link_directories($ENV{HOME}/usr/lib)

add_subdirectory(common)
add_subdirectory(io)
add_subdirectory(mesh)
add_subdirectory(property)
add_subdirectory(simplex)
add_subdirectory(topology_operation)
add_subdirectory(test)
